# trade-calc

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 558483a509d3_create_trades.py  57a047fd829e_create_users.py  57e60d6c94e5_add_is_admin_to_users.py  9ce67416e9b3_baseline_with_uuid_user_ids.py  b7adb25dbdfb_refactor_user_timestamps_into_mixin.py
backend/app/: main.py  scripts.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: accounts.py  analytics.py  auth.py  profile.py  trade.py  trades.py  users.py
backend/app/core/: config.py  deps.py  deps_storage.py  security.py
backend/app/crud/: account.py  trade.py  user.py
backend/app/db/: init_db.py  migrations_check.py  session.py
backend/app/models/: __init__.py  account.py  trade.py  trade_image.py  user.py
backend/app/models/mixins/: __init__.py  timestamps.py  trade_inputs.py  trade_outputs.py
backend/app/schemas/: account.py  trade.py  user.py
backend/app/services/: analytics.py  pnl.py
backend/app/services/storage/: __init__.py  base.py  db_store.py  image_processing.py
backend/tests/: conftest.py  test_auth.py  test_profile.py  test_trade_images.py  test_trades.py
backend/tests/utils/: auth.py  trades.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: AuthProvider.tsx
frontend/components/: CalculatorForm.tsx  FxFields.tsx  GoldFields.tsx  NavBar.tsx  Results.tsx  TradePlannerForm.tsx
frontend/lib/: types.tsx
(+16 files in other folders)
